# datastructures-c

./: .gitignore  CMakeLists.txt  README.md
include/: arraylist.h  hashmap.h
src/: arraylist.c  hashmap.c
test/: CMakeLists.txt  test_arraylist.cpp  test_hashmap.cpp
